[gd_scene load_steps=24 format=4 uid="uid://bsk1fqlaopb7g"]

[ext_resource type="PackedScene" uid="uid://dune6hb665jr5" path="res://objects/player.tscn" id="1_67fiw"]
[ext_resource type="Texture2D" uid="uid://cahcii8cm3avr" path="res://images/sky_0.png" id="1_gd3h6"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_ot6ry"]
[ext_resource type="PackedScene" uid="uid://dih4i0h2ay6d2" path="res://objects/block.tscn" id="2_6ex72"]
[ext_resource type="Texture2D" uid="uid://c0jfqjqq8cth3" path="res://images/vignette.png" id="4_1j5sh"]
[ext_resource type="Script" path="res://scripts/level.gd" id="4_jwdm5"]
[ext_resource type="PackedScene" uid="uid://cjmw3v0etqv4v" path="res://objects/false_block.tscn" id="5_o8cdo"]
[ext_resource type="PackedScene" uid="uid://ch2hanmgjdifh" path="res://objects/spikes.tscn" id="6_g068t"]
[ext_resource type="PackedScene" uid="uid://bebaivrx4wndy" path="res://objects/boundary.tscn" id="7_0alv4"]
[ext_resource type="FontFile" uid="uid://d0wtqe2o6yogm" path="res://fonts/SingleDay-Regular.ttf" id="9_b2mdn"]
[ext_resource type="PackedScene" uid="uid://6rtibjrc1dws" path="res://objects/jelly.tscn" id="9_ukei1"]
[ext_resource type="PackedScene" uid="uid://c5cgp6teqp4x8" path="res://objects/button.tscn" id="11_6cui7"]
[ext_resource type="Shader" path="res://scenes/iris_effect.gdshader" id="12_e78p5"]
[ext_resource type="PackedScene" uid="uid://c1eutwu1damkj" path="res://objects/cursor.tscn" id="13_ikede"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lwhbg"]

[sub_resource type="Shader" id="Shader_qe28n"]
code = "shader_type canvas_item;

uniform int width:hint_range(0, 5, 1);
uniform vec4 outline_color:source_color;
uniform float flickering_speed:hint_range(0.0, 50.0, 1.);
uniform float minimal_flickering_alpha:hint_range(0.0, 0.9, 0.1);

void fragment() {
	float pixel_size_x = 1.0/float(textureSize(TEXTURE,0).x);
	float pixel_size_y = 1.0/float(textureSize(TEXTURE,0).y);
	vec2 pixel_size = vec2(pixel_size_x, pixel_size_y);
	if (texture(TEXTURE, UV).a == 0.)
	{ 
		for(int x = -width; x <= width; x++)
		{
			for(int y = -width; y <= width; y++)
			{
				vec2 pixel_offset = vec2(float(x),float(y));
				if( texture(TEXTURE, UV+(pixel_offset*pixel_size)).a > 0.)
				{
					vec4 resulting_color = outline_color;
					float alpha_norm = (sin(TIME*flickering_speed) +1.2) *0.5;
					alpha_norm = (1.- minimal_flickering_alpha) * alpha_norm + minimal_flickering_alpha;
					resulting_color.a = alpha_norm;
					COLOR = resulting_color;
				}
			}
		}
	}else
	{
		COLOR = texture(TEXTURE, UV);
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0sb10"]
shader = SubResource("Shader_qe28n")
shader_parameter/width = null
shader_parameter/outline_color = null
shader_parameter/flickering_speed = null
shader_parameter/minimal_flickering_alpha = null

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_ix2ce"]
scenes/1/scene = ExtResource("2_6ex72")
scenes/2/scene = ExtResource("5_o8cdo")
scenes/3/scene = ExtResource("6_g068t")
scenes/4/scene = ExtResource("7_0alv4")
scenes/5/scene = ExtResource("9_ukei1")

[sub_resource type="TileSet" id="TileSet_4sprc"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetScenesCollectionSource_ix2ce")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dbaed"]
shader = ExtResource("12_e78p5")
shader_parameter/circle_size = 0.0

[sub_resource type="Animation" id="Animation_36tii"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_s6v1l"]
resource_name = "iris_effect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0dg4k"]
_data = {
"RESET": SubResource("Animation_36tii"),
"iris_effect": SubResource("Animation_s6v1l")
}

[node name="Main" type="Control"]
material = SubResource("ShaderMaterial_lwhbg")
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = -400.0
offset_bottom = -400.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ot6ry")

[node name="sky" type="Node2D" parent="."]
position = Vector2(400, 400)

[node name="sky_transition" type="Sprite2D" parent="sky"]
texture = ExtResource("1_gd3h6")

[node name="main_sky" type="Sprite2D" parent="sky"]
z_index = -1
texture = ExtResource("1_gd3h6")

[node name="player" parent="." instance=ExtResource("1_67fiw")]
material = SubResource("ShaderMaterial_0sb10")
position = Vector2(400, -35)

[node name="Level" type="Node2D" parent="."]
position = Vector2(400, 400)
script = ExtResource("4_jwdm5")

[node name="level_0" type="TileMapLayer" parent="Level"]
position = Vector2(-400, -400)
tile_map_data = PackedByteArray("AAAUABUAAAAAAAAABAAVABQAAAAAAAAABAAWABMAAAAAAAAABAAXABIAAAAAAAAABAAXABEAAAAAAAAABAAXABAAAAAAAAAABAAYAA8AAAAAAAAABAAYAA4AAAAAAAAABAAYAA0AAAAAAAAABAAYAAwAAAAAAAAABAAYAAsAAAAAAAAABAAYAAoAAAAAAAAABAAYAAkAAAAAAAAABAAXAAgAAAAAAAAABAAXAAcAAAAAAAAABAAWAAUAAAAAAAAABAAVAAQAAAAAAAAABAAQAAEAAAAAAAAABAAUAAMAAAAAAAAABAAMAAAAAAAAAAAABAALAAAAAAAAAAAABAAKAAAAAAAAAAAABAAJAAAAAAAAAAAABAAIAAEAAAAAAAAABAAHAAEAAAAAAAAABAAGAAEAAAAAAAAABAAAAAwAAAAAAAAABAASAAEAAAAAAAAABAAEAAMAAAAAAAAABAADAAQAAAAAAAAABAACAAUAAAAAAAAABAABAAcAAAAAAAAABAABAAgAAAAAAAAABAAAAAoAAAAAAAAABAAAAAsAAAAAAAAABAAFAAIAAAAAAAAABAABAAYAAAAAAAAABAAAAAkAAAAAAAAABAATABYAAAAAAAAABAAXAAYAAAAAAAAABAATAAIAAAAAAAAABAAOAAAAAAAAAAAABAANAAAAAAAAAAAABAAPAAAAAAAAAAAABAARAAEAAAAAAAAABAASABcAAAAAAAAABAARABcAAAAAAAAABAAQABcAAAAAAAAABAALABgAAAAAAAAABAAKABgAAAAAAAAABAAMABgAAAAAAAAABAAPABgAAAAAAAAABAAJABgAAAAAAAAABAAGABcAAAAAAAAABAAHABcAAAAAAAAABAAIABcAAAAAAAAABAAOABgAAAAAAAAABAANABgAAAAAAAAABAABABAAAAAAAAAABAAAAA8AAAAAAAAABAAAAA4AAAAAAAAABAAAAA0AAAAAAAAABAABABEAAAAAAAAABAACABMAAAAAAAAABAAFABYAAAAAAAAABAABABIAAAAAAAAABAADABQAAAAAAAAABAAEABUAAAAAAAAABAACAAgAAAAAAAAAAQACAAkAAAAAAAAAAQACAAoAAAAAAAAAAQACAAsAAAAAAAAAAQACAAwAAAAAAAAAAQACAA0AAAAAAAAAAQACAA4AAAAAAAAAAQACAA8AAAAAAAAAAQACABAAAAAAAAAAAQAWAAgAAAAAAAAAAQAWAAkAAAAAAAAAAQAWAAoAAAAAAAAAAQAWAAsAAAAAAAAAAQAWAAwAAAAAAAAAAQAWABAAAAAAAAAAAQAWAA4AAAAAAAAAAQAWAA0AAAAAAAAAAQAEAAgAAAAAAAAAAQADAAgAAAAAAAAAAQAEAAwAAAAAAAAAAQADAAwAAAAAAAAAAQAGAAgAAAAAAAAAAQAGAAkAAAAAAAAAAQAGAAoAAAAAAAAAAQAGAAsAAAAAAAAAAQAGAAwAAAAAAAAAAQAGAA0AAAAAAAAAAQAGAA4AAAAAAAAAAQAGAA8AAAAAAAAAAQAGABAAAAAAAAAAAQAHABAAAAAAAAAAAQAIABAAAAAAAAAAAQAKABAAAAAAAAAAAQAKAA8AAAAAAAAAAQAKAA4AAAAAAAAAAQAKAA0AAAAAAAAAAQAKAAwAAAAAAAAAAQAKAAsAAAAAAAAAAQAKAAoAAAAAAAAAAQAKAAkAAAAAAAAAAQALAAgAAAAAAAAAAQAKAAgAAAAAAAAAAQAMABAAAAAAAAAAAQALABAAAAAAAAAAAQAMAAwAAAAAAAAAAQALAAwAAAAAAAAAAQAPAAgAAAAAAAAAAQAOAAkAAAAAAAAAAQAOAAoAAAAAAAAAAQAOAAsAAAAAAAAAAQAOAAwAAAAAAAAAAQAOAA0AAAAAAAAAAQAOAA4AAAAAAAAAAQAOAA8AAAAAAAAAAQAOABAAAAAAAAAAAQAQAAwAAAAAAAAAAQAPAAwAAAAAAAAAAQAQAAkAAAAAAAAAAQAQAAoAAAAAAAAAAQAQAAsAAAAAAAAAAQAQAA0AAAAAAAAAAQAQAA4AAAAAAAAAAQAQAA8AAAAAAAAAAQAQABAAAAAAAAAAAQASABAAAAAAAAAAAQATABAAAAAAAAAAAQAUAA8AAAAAAAAAAQAUAA4AAAAAAAAAAQAUAA0AAAAAAAAAAQATAAwAAAAAAAAAAQASAAsAAAAAAAAAAQASAAoAAAAAAAAAAQASAAkAAAAAAAAAAQAUAAgAAAAAAAAAAQATAAgAAAAAAAAAAQAMAAgAAAAAAAAAAQA=")
tile_set = SubResource("TileSet_4sprc")

[node name="level_1" type="TileMapLayer" parent="Level"]
visible = false
position = Vector2(-400, -400)
tile_map_data = PackedByteArray("AAAUABUAAAAAAAAABAAVABQAAAAAAAAABAAWABMAAAAAAAAABAAXABIAAAAAAAAABAAXABEAAAAAAAAABAAXABAAAAAAAAAABAAYAA8AAAAAAAAABAAYAA4AAAAAAAAABAAYAA0AAAAAAAAABAAYAAwAAAAAAAAABAAYAAsAAAAAAAAABAAYAAoAAAAAAAAABAAYAAkAAAAAAAAABAAXAAgAAAAAAAAABAAXAAcAAAAAAAAABAAWAAUAAAAAAAAABAAVAAQAAAAAAAAABAAQAAEAAAAAAAAABAAUAAMAAAAAAAAABAAMAAAAAAAAAAAABAALAAAAAAAAAAAABAAKAAAAAAAAAAAABAAJAAAAAAAAAAAABAAIAAEAAAAAAAAABAAHAAEAAAAAAAAABAAGAAEAAAAAAAAABAAAAAwAAAAAAAAABAASAAEAAAAAAAAABAAEAAMAAAAAAAAABAADAAQAAAAAAAAABAACAAUAAAAAAAAABAABAAcAAAAAAAAABAABAAgAAAAAAAAABAAAAAoAAAAAAAAABAAAAAsAAAAAAAAABAAFAAIAAAAAAAAABAABAAYAAAAAAAAABAAAAAkAAAAAAAAABAATABYAAAAAAAAABAAXAAYAAAAAAAAABAATAAIAAAAAAAAABAAOAAAAAAAAAAAABAANAAAAAAAAAAAABAAPAAAAAAAAAAAABAARAAEAAAAAAAAABAASABcAAAAAAAAABAARABcAAAAAAAAABAAQABcAAAAAAAAABAALABgAAAAAAAAABAAKABgAAAAAAAAABAAMABgAAAAAAAAABAAPABgAAAAAAAAABAAJABgAAAAAAAAABAAGABcAAAAAAAAABAAHABcAAAAAAAAABAAIABcAAAAAAAAABAAOABgAAAAAAAAABAANABgAAAAAAAAABAABABAAAAAAAAAABAAAAA8AAAAAAAAABAAAAA4AAAAAAAAABAAAAA0AAAAAAAAABAABABEAAAAAAAAABAACABMAAAAAAAAABAAFABYAAAAAAAAABAABABIAAAAAAAAABAADABQAAAAAAAAABAAEABUAAAAAAAAABAAMAAwAAAAAAAAAAQAMAA0AAAAAAAAAAQAMAA4AAAAAAAAAAQALAA0AAAAAAAAAAQANAA0AAAAAAAAAAQAMABAAAAAAAAAAAQALABAAAAAAAAAAAQAKABAAAAAAAAAAAQANABAAAAAAAAAAAQAOABAAAAAAAAAAAQAJAA8AAAAAAAAAAQAIAA0AAAAAAAAAAQAIAA4AAAAAAAAAAQAHAA4AAAAAAAAAAQAPAA8AAAAAAAAAAQAQAA0AAAAAAAAAAQAQAA4AAAAAAAAAAQARAA4AAAAAAAAAAQAOAAUAAAAAAAAAAgANAAUAAAAAAAAAAgAMAAUAAAAAAAAAAgALAAUAAAAAAAAAAgAKAAUAAAAAAAAAAgAJAAYAAAAAAAAAAgAIAAYAAAAAAAAAAgAHAAcAAAAAAAAAAgAGAAgAAAAAAAAAAgAGAAkAAAAAAAAAAgAFAAoAAAAAAAAAAgAFAAsAAAAAAAAAAgAFAAwAAAAAAAAAAgAFAA0AAAAAAAAAAgAFAA4AAAAAAAAAAgAGAA8AAAAAAAAAAgAGABAAAAAAAAAAAgAHABEAAAAAAAAAAgAIABIAAAAAAAAAAgAJABIAAAAAAAAAAgAKABMAAAAAAAAAAgALABMAAAAAAAAAAgAMABMAAAAAAAAAAgANABMAAAAAAAAAAgAOABMAAAAAAAAAAgAPABIAAAAAAAAAAgAQABIAAAAAAAAAAgARABEAAAAAAAAAAgASAA8AAAAAAAAAAgASABAAAAAAAAAAAgATAAoAAAAAAAAAAgATAAsAAAAAAAAAAgATAAwAAAAAAAAAAgATAA0AAAAAAAAAAgATAA4AAAAAAAAAAgASAAkAAAAAAAAAAgASAAgAAAAAAAAAAgARAAcAAAAAAAAAAgAQAAYAAAAAAAAAAgAPAAYAAAAAAAAAAgAJAAoAAAAAAAAAAwAJAAsAAAAAAAAAAwAIAAoAAAAAAAAAAwAJAAkAAAAAAAAAAwAKAAoAAAAAAAAAAwAPAAoAAAAAAAAAAwAPAAkAAAAAAAAAAwAPAAsAAAAAAAAAAwAOAAoAAAAAAAAAAwAQAAoAAAAAAAAAAwA=")
tile_set = SubResource("TileSet_4sprc")

[node name="level_2" type="TileMapLayer" parent="Level"]
visible = false
position = Vector2(-400, -400)
tile_map_data = PackedByteArray("AAAUABUAAAAAAAAABAAVABQAAAAAAAAABAAWABMAAAAAAAAABAAXABIAAAAAAAAABAAXABEAAAAAAAAABAAXABAAAAAAAAAABAAYAA8AAAAAAAAABAAYAA4AAAAAAAAABAAYAA0AAAAAAAAABAAYAAwAAAAAAAAABAAYAAsAAAAAAAAABAAYAAoAAAAAAAAABAAYAAkAAAAAAAAABAAXAAgAAAAAAAAABAAXAAcAAAAAAAAABAAWAAUAAAAAAAAABAAVAAQAAAAAAAAABAAQAAEAAAAAAAAABAAUAAMAAAAAAAAABAAMAAAAAAAAAAAABAALAAAAAAAAAAAABAAKAAAAAAAAAAAABAAJAAAAAAAAAAAABAAIAAEAAAAAAAAABAAHAAEAAAAAAAAABAAGAAEAAAAAAAAABAAAAAwAAAAAAAAABAASAAEAAAAAAAAABAAEAAMAAAAAAAAABAADAAQAAAAAAAAABAACAAUAAAAAAAAABAABAAcAAAAAAAAABAABAAgAAAAAAAAABAAAAAoAAAAAAAAABAAAAAsAAAAAAAAABAAFAAIAAAAAAAAABAABAAYAAAAAAAAABAAAAAkAAAAAAAAABAATABYAAAAAAAAABAAXAAYAAAAAAAAABAATAAIAAAAAAAAABAAOAAAAAAAAAAAABAANAAAAAAAAAAAABAAPAAAAAAAAAAAABAARAAEAAAAAAAAABAASABcAAAAAAAAABAARABcAAAAAAAAABAAQABcAAAAAAAAABAALABgAAAAAAAAABAAKABgAAAAAAAAABAAMABgAAAAAAAAABAAPABgAAAAAAAAABAAJABgAAAAAAAAABAAGABcAAAAAAAAABAAHABcAAAAAAAAABAAIABcAAAAAAAAABAAOABgAAAAAAAAABAANABgAAAAAAAAABAABABAAAAAAAAAABAAAAA8AAAAAAAAABAAAAA4AAAAAAAAABAAAAA0AAAAAAAAABAABABEAAAAAAAAABAACABMAAAAAAAAABAAFABYAAAAAAAAABAABABIAAAAAAAAABAADABQAAAAAAAAABAAEABUAAAAAAAAABAAGAAoAAAAAAAAAAwAGAAsAAAAAAAAAAwAGAAwAAAAAAAAAAQAGAA0AAAAAAAAAAwAHAAoAAAAAAAAAAwAHAAsAAAAAAAAAAQAHAAwAAAAAAAAAAQAHAA0AAAAAAAAAAwAHAA4AAAAAAAAAAwAHAA8AAAAAAAAAAgAHABAAAAAAAAAAAQAIAAoAAAAAAAAAAQAIAAsAAAAAAAAAAQAIAAwAAAAAAAAAAQAIAA0AAAAAAAAAAQAIAA4AAAAAAAAAAwAJAAwAAAAAAAAAAQAJAA0AAAAAAAAAAQAJAA4AAAAAAAAAAQAJAA8AAAAAAAAAAQAJABAAAAAAAAAAAwAKAA0AAAAAAAAAAQAKAA4AAAAAAAAAAwALAA0AAAAAAAAAAQALAA4AAAAAAAAAAwAMAA0AAAAAAAAAAQAMAA4AAAAAAAAAAwANAA0AAAAAAAAAAQANAA4AAAAAAAAAAwAOAA0AAAAAAAAAAQAOAA4AAAAAAAAAAwAPAA0AAAAAAAAAAQAPAA4AAAAAAAAAAwAPAA8AAAAAAAAAAgAQAA0AAAAAAAAAAQAQAA4AAAAAAAAAAwAQAA8AAAAAAAAAAgAQABAAAAAAAAAAAQARAA0AAAAAAAAAAQARAA4AAAAAAAAAAwASAAwAAAAAAAAAAQASAA0AAAAAAAAAAQASAA4AAAAAAAAAAQASAA8AAAAAAAAAAQATAAsAAAAAAAAAAQATAA4AAAAAAAAAAQATAA8AAAAAAAAAAQATABAAAAAAAAAAAwAKAAwAAAAAAAAAAQALAAwAAAAAAAAAAQAMAAwAAAAAAAAAAQANAAwAAAAAAAAAAQAOAAwAAAAAAAAAAQAPAAwAAAAAAAAAAQAQAAwAAAAAAAAAAQARAAwAAAAAAAAAAQAEAAkAAAAAAAAAAgAFAAkAAAAAAAAAAwAGAAgAAAAAAAAAAwAGAAkAAAAAAAAAAwAHAAgAAAAAAAAAAQAHAAkAAAAAAAAAAgAIAAgAAAAAAAAAAQAIAAkAAAAAAAAAAQAJAAkAAAAAAAAAAQAEAAoAAAAAAAAAAwAFAAoAAAAAAAAAAwAJAAoAAAAAAAAAAQASAAsAAAAAAAAAAQATAAoAAAAAAAAAAQATAA0AAAAAAAAAAQATAAkAAAAAAAAAAQA=")
tile_set = SubResource("TileSet_4sprc")

[node name="level_3" type="TileMapLayer" parent="Level"]
visible = false
position = Vector2(-400, -400)
tile_map_data = PackedByteArray("AAAUABUAAAAAAAAABAAVABQAAAAAAAAABAAWABMAAAAAAAAABAAXABIAAAAAAAAABAAXABEAAAAAAAAABAAXABAAAAAAAAAABAAYAA8AAAAAAAAABAAYAA4AAAAAAAAABAAYAA0AAAAAAAAABAAYAAwAAAAAAAAABAAYAAsAAAAAAAAABAAYAAoAAAAAAAAABAAYAAkAAAAAAAAABAAXAAgAAAAAAAAABAAXAAcAAAAAAAAABAAWAAUAAAAAAAAABAAVAAQAAAAAAAAABAAQAAEAAAAAAAAABAAUAAMAAAAAAAAABAAMAAAAAAAAAAAABAALAAAAAAAAAAAABAAKAAAAAAAAAAAABAAJAAAAAAAAAAAABAAIAAEAAAAAAAAABAAHAAEAAAAAAAAABAAGAAEAAAAAAAAABAAAAAwAAAAAAAAABAASAAEAAAAAAAAABAAEAAMAAAAAAAAABAADAAQAAAAAAAAABAACAAUAAAAAAAAABAABAAcAAAAAAAAABAABAAgAAAAAAAAABAAAAAoAAAAAAAAABAAAAAsAAAAAAAAABAAFAAIAAAAAAAAABAABAAYAAAAAAAAABAAAAAkAAAAAAAAABAATABYAAAAAAAAABAAXAAYAAAAAAAAABAATAAIAAAAAAAAABAAOAAAAAAAAAAAABAANAAAAAAAAAAAABAAPAAAAAAAAAAAABAARAAEAAAAAAAAABAASABcAAAAAAAAABAARABcAAAAAAAAABAAQABcAAAAAAAAABAALABgAAAAAAAAABAAKABgAAAAAAAAABAAMABgAAAAAAAAABAAPABgAAAAAAAAABAAJABgAAAAAAAAABAAGABcAAAAAAAAABAAHABcAAAAAAAAABAAIABcAAAAAAAAABAAOABgAAAAAAAAABAANABgAAAAAAAAABAABABAAAAAAAAAABAAAAA8AAAAAAAAABAAAAA4AAAAAAAAABAAAAA0AAAAAAAAABAABABEAAAAAAAAABAACABMAAAAAAAAABAAFABYAAAAAAAAABAABABIAAAAAAAAABAADABQAAAAAAAAABAAEABUAAAAAAAAABAAMAAwAAAAAAAAAAwAMAAsAAAAAAAAAAgAMAAoAAAAAAAAAAgAMAAkAAAAAAAAAAgAMAAgAAAAAAAAAAgANAAcAAAAAAAAAAgANAAYAAAAAAAAAAgALAAYAAAAAAAAAAgALAAcAAAAAAAAAAgAPAAYAAAAAAAAAAgAPAAcAAAAAAAAAAgARAAcAAAAAAAAAAgAKAAYAAAAAAAAAAgAIAAgAAAAAAAAAAgAHAAgAAAAAAAAAAgAJAAkAAAAAAAAAAgAJAAoAAAAAAAAAAgALAAwAAAAAAAAAAgAOAAwAAAAAAAAAAgAOAAsAAAAAAAAAAgAOAAoAAAAAAAAAAgAOAAkAAAAAAAAAAgAOAAgAAAAAAAAAAgAQAAgAAAAAAAAAAgAQAAkAAAAAAAAAAgAQAAoAAAAAAAAAAgAQAAsAAAAAAAAAAgAQAAwAAAAAAAAAAgAPAA0AAAAAAAAAAgAPAA4AAAAAAAAAAgARAA0AAAAAAAAAAgASAAkAAAAAAAAAAgASAAoAAAAAAAAAAgASAAsAAAAAAAAAAgAHAAkAAAAAAAAAAQAGAAkAAAAAAAAAAQAGAAoAAAAAAAAAAQAGAAsAAAAAAAAAAQAHAAsAAAAAAAAAAQAIAAsAAAAAAAAAAQAIAAoAAAAAAAAAAQAIAAkAAAAAAAAAAQAKAAcAAAAAAAAAAQAJAAcAAAAAAAAAAQAIAAcAAAAAAAAAAQAJAAgAAAAAAAAAAQAKAAgAAAAAAAAAAQALAAgAAAAAAAAAAQALAAkAAAAAAAAAAQALAAoAAAAAAAAAAQALAAsAAAAAAAAAAQAKAAsAAAAAAAAAAQAKAAoAAAAAAAAAAQAKAAkAAAAAAAAAAQAHAAoAAAAAAAAAAwAMAAYAAAAAAAAAAQAMAAcAAAAAAAAAAQANAAgAAAAAAAAAAQANAAkAAAAAAAAAAQANAAoAAAAAAAAAAQANAAsAAAAAAAAAAQANAAwAAAAAAAAAAQAOAA0AAAAAAAAAAQAPAAwAAAAAAAAAAQAPAAsAAAAAAAAAAQAPAAoAAAAAAAAAAQAPAAkAAAAAAAAAAQAPAAgAAAAAAAAAAQAOAAYAAAAAAAAAAQAOAAcAAAAAAAAAAQAQAAcAAAAAAAAAAQARAAgAAAAAAAAAAQARAAkAAAAAAAAAAQARAAoAAAAAAAAAAQARAAsAAAAAAAAAAQARAAwAAAAAAAAAAQAQAA0AAAAAAAAAAQAMAA0AAAAAAAAAAwANAA0AAAAAAAAAAwANAA4AAAAAAAAAAwAOAA4AAAAAAAAAAwAOAA8AAAAAAAAAAwAPABAAAAAAAAAAAwAPABEAAAAAAAAAAwAQABEAAAAAAAAAAwAQABIAAAAAAAAAAwAKAAwAAAAAAAAAAwAKAA0AAAAAAAAAAwAKAA4AAAAAAAAAAwALAA8AAAAAAAAAAwALABAAAAAAAAAAAwALABEAAAAAAAAAAwALABIAAAAAAAAAAwAIAAwAAAAAAAAAAwAIAA0AAAAAAAAAAwAHAA0AAAAAAAAAAwAGAA4AAAAAAAAAAwAGAA8AAAAAAAAAAwAGABAAAAAAAAAAAwA=")
tile_set = SubResource("TileSet_4sprc")

[node name="level_4" type="TileMapLayer" parent="Level"]
visible = false
position = Vector2(-400, -400)
tile_map_data = PackedByteArray("AAAUABUAAAAAAAAABAAVABQAAAAAAAAABAAWABMAAAAAAAAABAAXABIAAAAAAAAABAAXABEAAAAAAAAABAAXABAAAAAAAAAABAAYAA8AAAAAAAAABAAYAA4AAAAAAAAABAAYAA0AAAAAAAAABAAYAAwAAAAAAAAABAAYAAsAAAAAAAAABAAYAAoAAAAAAAAABAAYAAkAAAAAAAAABAAXAAgAAAAAAAAABAAXAAcAAAAAAAAABAAWAAUAAAAAAAAABAAVAAQAAAAAAAAABAAQAAEAAAAAAAAABAAUAAMAAAAAAAAABAAMAAAAAAAAAAAABAALAAAAAAAAAAAABAAKAAAAAAAAAAAABAAJAAAAAAAAAAAABAAIAAEAAAAAAAAABAAHAAEAAAAAAAAABAAGAAEAAAAAAAAABAAAAAwAAAAAAAAABAASAAEAAAAAAAAABAAEAAMAAAAAAAAABAADAAQAAAAAAAAABAACAAUAAAAAAAAABAABAAcAAAAAAAAABAABAAgAAAAAAAAABAAAAAoAAAAAAAAABAAAAAsAAAAAAAAABAAFAAIAAAAAAAAABAABAAYAAAAAAAAABAAAAAkAAAAAAAAABAATABYAAAAAAAAABAAXAAYAAAAAAAAABAATAAIAAAAAAAAABAAOAAAAAAAAAAAABAANAAAAAAAAAAAABAAPAAAAAAAAAAAABAARAAEAAAAAAAAABAASABcAAAAAAAAABAARABcAAAAAAAAABAAQABcAAAAAAAAABAALABgAAAAAAAAABAAKABgAAAAAAAAABAAMABgAAAAAAAAABAAPABgAAAAAAAAABAAJABgAAAAAAAAABAAGABcAAAAAAAAABAAHABcAAAAAAAAABAAIABcAAAAAAAAABAAOABgAAAAAAAAABAANABgAAAAAAAAABAABABAAAAAAAAAABAAAAA8AAAAAAAAABAAAAA4AAAAAAAAABAAAAA0AAAAAAAAABAABABEAAAAAAAAABAACABMAAAAAAAAABAAFABYAAAAAAAAABAABABIAAAAAAAAABAADABQAAAAAAAAABAAEABUAAAAAAAAABAA=")
tile_set = SubResource("TileSet_4sprc")

[node name="Vignette" type="Sprite2D" parent="."]
position = Vector2(400, 400)
texture = ExtResource("4_1j5sh")

[node name="void_fill" type="ColorRect" parent="Vignette"]
z_index = -2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -966.0
offset_top = -966.0
offset_right = -166.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 400)

[node name="top_text" type="RichTextLabel" parent="."]
z_index = 2
layout_mode = 0
offset_top = 128.0
offset_right = 800.0
offset_bottom = 153.0
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/normal_font = ExtResource("9_b2mdn")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "PRESS THE ARROW KEYS TO PLAY!"
fit_content = true

[node name="bottom_text" type="RichTextLabel" parent="."]
z_index = 2
layout_mode = 0
offset_top = 672.0
offset_right = 800.0
offset_bottom = 697.0
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/normal_font = ExtResource("9_b2mdn")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "A GAME BY: KEVEN VAILLANCOURT"
fit_content = true

[node name="button_1" parent="." instance=ExtResource("11_6cui7")]
z_index = 2
layout_mode = 1
offset_left = 56.0
offset_top = 56.0
offset_right = 120.0
offset_bottom = 120.0

[node name="button_2" parent="." instance=ExtResource("11_6cui7")]
z_index = 2
layout_mode = 1
offset_left = 688.0
offset_top = 56.0
offset_right = 752.0
offset_bottom = 120.0
go_to_level = 1

[node name="button_3" parent="." instance=ExtResource("11_6cui7")]
z_index = 2
layout_mode = 1
offset_left = 48.0
offset_top = 672.0
offset_right = 112.0
offset_bottom = 736.0
go_to_level = 2

[node name="button_4" parent="." instance=ExtResource("11_6cui7")]
z_index = 2
layout_mode = 1
offset_left = 688.0
offset_top = 672.0
offset_right = 752.0
offset_bottom = 736.0
go_to_level = 3

[node name="iris_effect" type="ColorRect" parent="."]
z_index = 3
material = SubResource("ShaderMaterial_dbaed")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 800.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.866667, 0.615686, 0.313726, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="iris_effect"]
libraries = {
"": SubResource("AnimationLibrary_0dg4k")
}

[node name="cursor" parent="." instance=ExtResource("13_ikede")]
z_index = 4

[connection signal="pressed" from="button_1" to="." method="_on_button_1_pressed"]
